# GGBond

./: .gitignore  Gemini CLI 深度定制 GUI - 完整 API 参考手册.html  LICENSE  README-CN.md  README.md  README.zh-CN.md  RELEASE_NOTES.md  ai_news_2026_02_12.txt  eslint.config.mjs  gemini-cli-api.md  gemini-cli-ui-api.md  middleware.ts  next.config.js  next.config.ts  package-lock.json  package.json  reference_repo.md  repro_auth.js  repro_auth.ts  repro_cli.ts  tsconfig.json  tsconfig.sidecar.json  tsconfig.tsbuildinfo  vitest.config.ts
__tests__/: api-interceptor.test.ts  auth.test.ts  auth_flow.test.ts  boot-telemetry.test.ts  chat-api-rate-limit.test.ts  diagnostics-dialog.test.tsx  example.test.tsx  gemini-utils.test.ts  pricing.test.ts  provider-registry.test.ts  rate-limit.test.ts  security.test.ts  security_logs.test.ts  session-crud.integration.test.ts  session-crud.test.ts  setup.ts  sidebar.test.tsx  titlebar.test.tsx  utils.test.ts
app/: HomePageClient.tsx  globals.css  layout.tsx  page.tsx  timeline.css
components/: AddWorkspaceDialog.tsx  AgentPanel.tsx  AgentPreviewDialog.tsx  AgentRunsList.tsx  ApiInterceptorInit.tsx  ArchivedSessionsDialog.tsx  ArtifactPreview.tsx  BranchInsights.tsx  ChatContainer.tsx  ChatInput.tsx  CodeBlock.tsx  CommandPalette.tsx  ConfirmDialog.tsx  ConfirmationDialog.tsx  ConversationGraph.tsx  CreateAgentDialog.tsx  DeleteConfirmDialog.tsx  DiffBlock.tsx  (+43 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/sidecar/: server.js
src-tauri/src/: lib.rs  pty.rs
(+320 files in other folders)
