[package]
name = "app"
version = "0.3.7"
description = "GGBond Tauri App"
authors = ["Kevinsyuan"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.0-rc.3", features = ["macos-private-api"] }
tauri-plugin-dialog = "2.0.0-rc"
tauri-plugin-log = "2"
tokio = { version = "1.30", features = ["full"] }
portable-pty = "0.8"
thiserror = "1.0"
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
dirs = "5"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
